GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.11.0-pre10:
	* Many, many bug fixes
	* Can choose to not send away auto-response (thanks phzzzt)
	* Uh... Oscar works? For now?
	* IRC Plugin can do whois (right click and info)
	* IRC Plugin got away message support
	* Gaim blist to WinAIM blt perl script (courtesy Andy Harrison)
	* Can view all group chats in one tabbed window (same keybindings
	  as for tabbed normal conversations)

version 0.11.0-pre9 (03/26/2001):
	* Can register Jabber accounts (load the Jabber plugin and click
	  Register on the login window)
	* GtkIMHtml handles themes (no background pixmaps though) (thanks
	  decklin, mishan)
	* URLS Linkify properly in Buddy chats
	* Jabber compiles better on Solaris?
	* Gaim works with Oscar Again (Huge thanks to Adam Fritzler of
	  libfaim)

version 0.11.0-pre8 (03/23/2001):
	* Fixed a problem with MSN not detecting signoffs and buddy updates.
	* Implemented away options in MSN
	* Alt-[1-9] to go to [1-9]th pane in tabbed convo window
	* Jabber fixes, Oscar fixes (!), Yahoo fixes, TOC fixes
	* Can use Alt to access menu, and Ctl-char for certain actions
	  (thanks baldnik)
	* Oscar blocking works (?)
	* MSN can see status of other users

version 0.11.0-pre7 (03/16/2001):
	* Can build RPMs as non-root
	* New yahoo library (can use HTTP proxy)
	* Command-line arg to specify config file (thanks Jason Boerner)
	* Can view all conversations in one tabbed window (Control-[ and
	  Control-] move left and right respectively; Control-Tab moves
	  to the next unread, or the next tab if there are no unread tabs)
	* Tooltips on links work again
	* Can log system notices: signons/signoffs, awayness and idleness
	  (thanks Andrew Echols)
	* MSN fixes
	* Applet fixes

version 0.11.0-pre6 (03/06/2001):
	* Fixed bug with NAS support
	* Napster plugin is included again
	  (Thanks for pointing out that it was missing,
	  (Yan V. Bulgak)