@@ -2,12 +2,12 @@ noinst_PROGRAMS = au2h
 
 au2h_SOURCES = au2h.c
 
-EXTRA_DIST = BuddyArrive.au BuddyLeave.au Send.au Receive.au
+EXTRA_DIST = BuddyArrive.au BuddyLeave.au Send.au Receive.au RedAlert.au
 
-all: BuddyArrive.h BuddyLeave.h Send.h Receive.h
+all: BuddyArrive.h BuddyLeave.h Send.h Receive.h RedAlert.h
 
 clean distclean:
-	rm -f BuddyArrive.h BuddyLeave.h Send.h Receive.h
+	rm -f BuddyArrive.h BuddyLeave.h Send.h Receive.h RedAlert.h
 
 BuddyArrive.h: BuddyArrive.au au2h
 	./au2h $< $@
@@ -19,4 +19,7 @@ Send.h: Send.au au2h
 	./au2h $< $@
 
 Receive.h: Receive.au au2h
+	./au2h $< $@
+
+RedAlert.h: RedAlert.au au2h
 	./au2h $< $@
